# Visual_SLAM_in_turtlebot3

./: README.md
control_movimiento/: CMakeLists.txt  package.xml
control_movimiento/launch/: turtlebot3_world1.launch
control_movimiento/models/sobject/: model.config  model.sdf
control_movimiento/models/sobject/materials/scripts/: sobject.material
control_movimiento/src/: robot_obstaculo.py
control_movimiento/worlds/: turtlebot3_world1.world
odom_imu/: CMakeLists.txt  package.xml
odom_imu/launch/: empty_world.launch  turtlebot3_kinect_proyect_world.launch
odom_imu/src/: ekf_imu.py
odom_imu/urdf/: kinect_gazebo.txt  turtlebot3.gazebo.xacro  turtlebot3.urdf.xacro  turtlebot3_kinect.gazebo.xacro  turtlebot3_kinect.urdf.xacro
odom_imu/worlds/: turtlebot3_world1.world
stereo_camera/: CMakeLists.txt  README.md  package.xml
stereo_camera/launch/: maze.launch  rviz.launch  world.launch
stereo_camera/my_ground_plane/: model.sdf
stereo_camera/my_ground_plane/materials/scripts/: my_ground_plane.material
stereo_camera/src/: pcPub.py  show_image.py  sift_matching.py  targeting_tools.py  triangulacion.py
stereo_camera/urdf/: kinect.urdf.xacro  kinect2.urdf.xacro  turtlebot3.gazebo.xacro  turtlebot3.urdf.xacro
stereo_camera/worlds/: maze.world  museum.world
